<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".View.WalletRecoveryFragment">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_marginTop="34dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_alignParentStart="true"
              android:layout_alignParentTop="true"
              android:id="@+id/textViewRecoveryDescription"
              android:text="@string/description_recovery"
              android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_marginTop="34dp"
              android:id="@+id/textView3"
              android:text="@string/title_recovery"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:layout_below="@+id/textViewRecoveryDescription"
              android:layout_centerHorizontal="true"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_marginTop="34dp"
              android:layout_marginLeft="60dp"
              android:layout_marginRight="60dp"
              android:id="@+id/textViewRecoveryMnemonic"
              android:text="Large Text"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:layout_below="@+id/textView3"
              android:layout_centerHorizontal="true"
              android:textIsSelectable="true"/>

    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/buttonRecovery2Main"
            android:text="@string/main_menu"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>